don't access not yet set sessionController()

the accessibility interface might by chance be requested before we set the session controller field

BUG: 487819